[project]
name = "organelle_transport_analysis"
version = "1.0.0"
authors = [
  { name="Anna Gavrilova", email="anna.gavrilova@manchester.ac.uk" },
]
description = "Tools for organelle transport analysis"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/umkich/organelle_transport_analysis"